Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-51859

Qt 5.6 cannot compile with NDK r11

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • None
    • 5.6.0 RC
    • QPA
    • None
    • Android

      I tried to compile Qt 5.6 with latest NDK (r11) ant it fails. With previous NDK (r10e) it compiles fine.

      I got the following error:

      /mnt/store/Development/qt5/qtbase/src/corelib/global/qlogging.cpp: In function 'long int qt_gettid()':
      /mnt/store/Development/qt5/qtbase/src/corelib/global/qlogging.cpp:103:20: error: 'SYS_gettid' was not declared in this scope
           return syscall(SYS_gettid);
                          ^
      /mnt/store/Development/qt5/qtbase/src/corelib/global/qlogging.cpp:104:1: warning: control reaches end of non-void function [-Wreturn-type]
       }
       ^
      

      If I hack the code to skip this branch, compilation succeeds.

        For Gerrit Dashboard: QTBUG-51859
        # Subject Branch Project Status CR V

            taipan BogDan Vatra
            krnekit Nikita Krupenko
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes